2011-05-27  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_driver.c: On Linux >= 2.6.33, use <generated/autoconf.h>
	instead of <linux/autoconf.h>. Include it after <linux/version.h>.
	* Makefile (VERSION_HEADER): Use generated/utsrelease.h if present
	instead of linux/utsrelease.h or linux/version.h.

2011-05-27  Guillem Jover  <guillem@hadrons.org>

	* Makefile: Do not use negative exit codes.

2008-06-24  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_driver.c (MODULE_VERSION): Bump to '2008.06.24'.

2008-06-24  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_driver.c (KERNEL_MIN_VER): Remove defenition, and replace all
	users with its contents.

2008-06-24  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_driver.c (pci_dev_put): Define to nothing on kernels < 2.5.73.
	(setmtrr_3dfx): Call pci_dev_put to release the refcount on the
	Intel 82441FX PCI device when done with it.

2008-06-22  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_driver.c (id_table_3dfx): Terminate the list with an empty
	element.

2008-06-22  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_driver.c (pci_get_device): On Linux < 2.5.73 define it as
	pci_find_device.
	(findCardType, setmtrr_3dfx): Use pci_get_device instead of deprecated
	pci_find_device.

2008-06-22  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_driver.c (cleanup_module): Ignore return value from
	unregister_chrdev as it actually returns void now.

2007-02-06  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_driver.c (MODULE_VERSION): Bump to '2007.02.06'.

2007-02-06  Guillem Jover  <guillem@hadrons.org>

	Fix warnings when not checking pci_register_driver return codes.

	* 3dfx_driver.c (findCards): Return int instead of void, and normalize
	error code to be always negative, otherwise return numCards.
	(init_module): Check for findCards return code, print a warning and
	exit the module on error.
	(init_3dfx): Likewise.

2007-02-06  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_driver.c (HAVE_DEVFS): Define to 1 if